Final project completed- added 2 more collections and passing jest tests
